objects/SmartSurveyConfiguration__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Endpoint__c</fullName>
        <label>Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notify_On_Errors__c</fullName>
        <label>Notify On Errors</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Psswd__c</fullName>
        <label>Psswd</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <label>Username</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>SmartSurveyConfiguration</label>
</CustomObject>